--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         
                         <div class="col col-third food-item">
                             <p class="food-name">Ramen</p>
-                            <img src="img/Ramen.jpg" alt="Ramen" class="food-img">
+                            <img src="img/ramen.jpg" alt="Ramen" class="food-img">
                         </div>
 
                         <div class="col col-third food-item">
