update sakura icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Japan Daisuki</title>
-        <link rel="icon" href="img/sakuraicon.png" type="x-icon">
+        <link rel="icon" href="img/sakuraicon.png" type="img/x-icon">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="fonts/themify-icons/themify-icons.css">
     </head>
